Remove redundant Thymeleaf prefix

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -13,7 +13,7 @@
 <form th:action="@{/login}" method="post">
     <div>
         <label for="username">Username:</label>
-        <input th:type="text" id="username" name="username" required/>
+        <input type="text" id="username" name="username" required/>
     </div><br>
 
     <div>
